--- a/css/base/_media.sass
+++ b/css/base/_media.sass
@@ -1,16 +1,11 @@
-@media screen and ( min-width: 440px )
+@media screen and ( min-width: 550px )
     .navbar
         justify-content: space-between
     .nav-links
-        // a
-        //     margin: 0 .3rem
-            
+      
 @media screen and ( min-width: 635px )
-    // html
-    //     font-size: 1.2rem
-    // .nav-links
-    //     a
-    //         margin: 0 1rem
+    .nav-links a
+        font-size: 1.2rem
     .header figure
         width: 50%
         height: 50%
