--- a/css/layout/_navbar.sass
+++ b/css/layout/_navbar.sass
@@ -7,6 +7,7 @@
     +flex(center,center,row wrap)
     gap: .5rem
     z-index: 10
+    box-shadow: 1px 2px 3px rgba($black_1 , .3)
     background: $white
     transition: all 200ms ease
 .nav-logo
@@ -20,7 +21,7 @@
     column-gap: .5rem
     color: $black_2
     a
-        font-size: 1rem
+        font-size: .8rem
         margin: .5rem .3rem
         transition: all 200ms ease
         &:hover
